--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -1,19 +1,17 @@
 @import './index.scss';
+
 html,
 body,
 #root {
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
   overflow: hidden;
 }
 
 * {
   box-sizing: border-box;
-}
-
-html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-  font-size: 62.5%;
 }
 
 body {
