--- a/src/components/component(example)/InputBox/style.module.scss
+++ b/src/components/component(example)/InputBox/style.module.scss
@@ -18,7 +18,7 @@
 
 }
 
-.input {
+.inputemail {
     display: flex;
     align-items: center;
     width: 320px;
@@ -31,7 +31,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    color: #9FA6B2;
+    color: #373740; 
 
     &:focus {
         width: 320px;
@@ -45,3 +45,56 @@
     }
 }
 
+.inputpw {
+  display: flex;
+  align-items: center;
+  width: 320px;
+  height: 24px;
+  padding: 18px 15px;
+  flex: 1;
+  border: 1px solid #CCD5E3;
+  border-radius: 8px;
+  font-family: Pretendard;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #373740;
+
+
+  &:focus {
+      width: 320px;
+      height: 24px;
+      top: 79px;
+      left: 16px;
+      padding: 18px 15px;
+      border: 1px solid #FF5B56;
+      border-radius: 8px;
+      outline: none;
+  }
+}
+
+.logo {
+  width: 16px;
+  height: 16px;
+  cursor: pointer; 
+  //display: flex;
+  //align-items: center;
+  right: 10px;
+}
+
+
+.message{
+  font-family: Pretendard;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #373740;
+}
+
+.error{
+  font-family: Pretendard;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16.8px;
+  color: #FF5B56;
+}
