--- a/src/components/component(example)/SearchBar/style.module.scss
+++ b/src/components/component(example)/SearchBar/style.module.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   top: 16px;
   left: 16px;
-  //width: 100%;
+  width: 100%;
   height: 54px;
   padding: 15px 16px;
 }
