--- a/src/components/components/Button/Button.module.scss
+++ b/src/components/components/Button/Button.module.scss
@@ -7,17 +7,18 @@
 
   /* 크기별 스타일 */
   &.add-link-large {
-    width: 350px;
-    height: 53px;
+    width: 400px;
+    height: 60px;
     padding: 16px 20px;
     gap: 10px;
     border-radius: 8px;
     border: none;
+    font-size: 22px;
   }
 
   &.add-link-small {
     width: 300px;
-    height: 37px;
+    height: 40px;
     padding: 10px 16px;
     border-radius: 8px;
     opacity: 0px;
@@ -25,12 +26,13 @@
   }
 
   &.add-folder {
-    width: 127 px;
+    width: 124px;
     height: 35px;
     padding: 8px 24px 8px 24px;
     border-radius: 20px;
     opacity: 0px;
     border: none;
+    font-size: 15px;
   }
 
   &.share {
@@ -39,7 +41,7 @@
     opacity: 0px;
     border-radius: 50%;
     border: none;
-    background-image: url('../Button/assets/ShareIcon.png');
+    background-image: url('../../../assets/ShareIcon.png');
     background-repeat: no-repeat;
     background-position: center;
   }
