✨Feat : gnb, fooer 수정
1. 멘토링 내용 적용
  - SVG component props : rest props로 대체
  - gnb, footer의 경우에는 시멘틱 태그 이용
  - footer icon에 alt 넣어두기

2. gnb 메인 로고 반응형 대응
  - useWindowSize hooks
  - 겸사 constants 설정

3. assets들 public으로 옮김

--- a/src/components/Gnb/style.module.scss
+++ b/src/components/Gnb/style.module.scss
@@ -1,52 +1,59 @@
 @import '@/styles';
 
-$gnbHeight: 93px;
-$gnbMobileHeight: 63px;
-
-$gnbPadding: 20px;
-$gnbMobilePadding: 13px;
-
-$gnbContainerMaxWidth: 1520px;
-$gnbBgColor: #f0f6ff;
-
-$mediaMaxWidth: 800px;
+$BG_COLOR: #f0f6ff;
 
 .gnb {
-  height: calc($gnbHeight - ($gnbPadding * 2));
-  padding: $gnbPadding;
+  $HEIGHT: 102px;
+  $PADDING_X: 200px;
+  $PADDING_Y: 32px;
 
-  display: flex;
-  justify-content: center;
-
-  background-color: $gnbBgColor;
-
-  @media screen and (max-width: $mediaMaxWidth) {
-    height: calc($gnbMobileHeight - ($gnbMobilePadding * 2));
-  }
-}
-.container {
   display: flex;
   justify-content: space-between;
   align-items: center;
 
-  max-width: $gnbContainerMaxWidth;
-  width: 100%;
-}
+  height: calc($HEIGHT - ($PADDING_Y * 2));
+  padding: $PADDING_Y $PADDING_X;
+  background-color: $BG_COLOR;
 
-.logo {
-  @media screen and (max-width: $mediaMaxWidth) {
-    width: 16px;
+  .userSection {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+  }
+
+  // NOTE : 해당 max-width는 임의로 설정하였습니다.
+  // 해당 width부터는 기존의 레이아웃이 어울리지 않는다 생각하였습니다.
+  @media screen and (max-width: 950px) {
+    padding: $PADDING_Y;
+  }
+
+  @media screen and (max-width: $MOBILE_WIDTH) {
+    $HEIGHT: 65px;
+    $M_PADDING_X: 32px;
+    $M_PADDING_Y: 18px;
+
+    height: calc($HEIGHT - ($M_PADDING_Y * 2));
+    padding: $M_PADDING_Y $M_PADDING_X;
+
+    .userSection {
+      gap: 16px;
+    }
   }
 }
-.btn {
+
+/////////////////////////
+.UserProfile {
   display: flex;
   align-items: center;
+  gap: 6px;
 
-  > .email {
-    margin-left: 6px;
-    @include font-base($gray-500, 400, 14px, 16.71px);
+  $EMAIL_COLOR: #3e3e43;
+  .email {
+    @include font-base($EMAIL_COLOR, 400, 14px, 16.71px);
+  }
 
-    @media screen and (max-width: $mediaMaxWidth) {
+  @media screen and (max-width: $TABLET_WIDTH) {
+    .email {
       display: none;
     }
   }
