--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -1,8 +1,5 @@
 @import '@/styles';
 
-$copyRightColor: #676767;
-$contractColor: #cfcfcf;
-
 $fontSize: 16px;
 $fontWeight: 400;
 $lineHeight: 18.4px;
@@ -12,69 +9,69 @@ $footerPadding: 32px;
 
 $snsWrapperMaxWidth: 116px;
 
-$mediaMaxWidth: 800px;
-
 .footer {
   display: flex;
-  background-color: $black;
-  padding: $footerPadding;
+  background-color: $BLACK;
+  padding: $footerPadding 104px;
   height: calc($footerHeight - ($footerPadding * 2));
+  align-items: flex-start;
+  white-space: nowrap;
 
-  @media screen and (max-width: $mediaMaxWidth) {
-    paading: 0 $footerPadding;
+  @media screen and (max-width: $FOOTER_TABLET_WIDTH) {
+    padding: $footerPadding;
   }
 }
+
 .container {
-  $innerMargin: 104px;
-
   display: flex;
   width: 100%;
+  grid-template-columns: 1fr auto auto;
+  align-items: center;
   justify-content: space-between;
-  margin: 0 calc($innerMargin - $footerPadding);
 
-  @media screen and (max-width: $mediaMaxWidth) {
-    margin: 0;
-    flex-direction: column-reverse;
-    flex-wrap: wrap;
-    align-content: space-between;
-    justify-content: flex-end;
-  }
-}
-
-.test {
-  display: flex;
-  width: 100%;
-  @media screen and (max-width: $mediaMaxWidth) {
-    width: auto;
+  @media screen and (max-width: $FOOTER_TABLET_WIDTH) {
+    display: grid;
     height: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column-reverse;
+    grid-template-columns: auto auto;
+    align-items: stretch;
+    align-content: space-between;
   }
 }
+
+$copyRightColor: #676767;
+$contractColor: #cfcfcf;
+
 .copyright {
   @include font-base($copyRightColor, $fontWeight, $fontSize, $lineHeight);
+}
 
-  padding: 0 37% 0 0;
-  @media screen and (max-width: 1030px) {
-    padding: 0 30% 0 0;
-  }
-  @media screen and (max-width: $mediaMaxWidth) {
-    padding: 40px 0 0 0;
-  }
-}
-.contract_wrapper {
+.contractList {
   display: flex;
-  white-space: nowrap;
+  width: fit-content;
+  gap: 30px;
   justify-content: center;
+  grid-column: 2 / 3;
+
+  @media screen and (max-width: $FOOTER_TABLET_WIDTH) {
+    justify-content: flex-start;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+
+  .contract {
+    text-decoration: none;
+    @include font-base($contractColor, $fontWeight, $fontSize, $lineHeight);
+  }
 }
-.contract {
-  text-decoration: none;
-  @include font-base($contractColor, $fontWeight, $fontSize, $lineHeight);
-}
-.sns_wrapper {
-  max-width: $snsWrapperMaxWidth;
-  width: 100%;
+
+.snsList {
+  width: 116px;
   display: flex;
   justify-content: space-between;
+  grid-column: 3 / 4;
+
+  @media screen and (max-width: $FOOTER_TABLET_WIDTH) {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
 }
