--- a/src/components/components/Button/Button.module.scss
+++ b/src/components/components/Button/Button.module.scss
@@ -7,27 +7,26 @@
   justify-content: center;
   font-family: $font-family;
   font-style: $font-style;
+  margin: 10px;
 
   /* 크기별 스타일 */
-  &.add-link-large {
-    width: 400px;
+  &.add-link {
+    width: 100%;
+    max-width: 400px;
     height: 60px;
     padding: 16px 20px;
     gap: 10px;
     border-radius: 8px;
-    border: none;
     font-size: 22px;
-  }
-
-  &.add-link-small {
-    width: 300px;
-    height: 40px;
-    padding: 10px 16px;
-    border-radius: 8px;
-    opacity: 0px;
     border: none;
-  }
 
+    @media (max-width: 768px) {
+      max-width: 250px;
+      height: 50px;
+      font-size: 18px;
+      padding: 12px 16px;
+    }
+  }
   &.add-folder {
     width: 124px;
     height: 35px;
@@ -90,7 +89,7 @@
     color: $black;
   }
 
-  &.primary-gradient {
+  &.gradient {
     background: linear-gradient(90.99deg, $primary 0.12%, $skyblue 101.84%);
     color: white;
   }
