--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
-@import "./color.scss";
-@import "./font.scss";
-@import "./variable.scss";
+@import './color.scss';
+@import './font.scss';
+@import './variable.scss';
+// @import './normalize.css';
