--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -1,4 +1,3 @@
-@import './index.scss';
 html,
 body,
 #root {
@@ -8,6 +7,8 @@ body,
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -189,4 +190,8 @@ template {
 
 [hidden] {
   display: none;
+}
+
+li {
+  list-style: none;
 }
