✨Feat:랜랜딩페이지 생성 및 스타일작업

--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -1,6 +1,6 @@
 $primary: #6d6afe;
+$skyblue: #6ae3fe;
 $red: #ff5b56;
-
 $black: #111322;
 $white: #ffffff;
 
@@ -9,3 +9,13 @@ $gray-200: #e7effb;
 $gray-300: #ccd5e3;
 $gray-400: #9fa6b2;
 $gray-500: #3e3e43;
+
+$main-gradient-end: #ff9f9f;
+$gradient-wish-link-start: #fe8a8a;
+$gradient-wish-link-end: #a4ceff;
+$gradient-management-start: #6fbaff;
+$gradient-management-end: #ffd88b;
+$gradient-share-start: #6d7ccd;
+$gradient-share-end: rgba(82, 136, 133, 0.22);
+$gradient-search-start: #fe578f;
+$gradient-search-end: #68e8f9;
