--- a/src/components/component(example)/Button/Button.module.scss
+++ b/src/components/component(example)/Button/Button.module.scss
@@ -8,7 +8,7 @@
   font-family: $font-family;
   font-style: $font-style;
   margin: 10px;
-  @include font-base($black, 500, 16px, 1.5);
+  @include font-base($BLACK, 500, 16px, 1.5);
 
   /* 크기별 스타일 */
   &.add-link {
@@ -56,7 +56,7 @@
     gap: 0px;
     border-radius: 5px;
     opacity: 0px;
-    border: 2px solid $primary;
+    border: 2px solid $PRIMARY;
     font-weight: 400px;
     font-size: 16px;
     line-height: 19.2px;
@@ -69,29 +69,29 @@
     gap: 0px;
     border-radius: 5px;
     opacity: 0px;
-    border: 2px solid $primary;
+    border: 2px solid $PRIMARY;
     font-weight: 400px;
     font-size: 14px;
   }
 
   /* 색상별 스타일 */
   &.primary {
-    background-color: $primary;
-    color: white;
+    background-color: $PRIMARY;
+    color: $WHITE;
   }
 
   &.white {
-    background-color: $white;
-    color: $black;
+    background-color: $WHITE;
+    color: $BLACK;
   }
 
   &.gray-200 {
-    background-color: $gray-200;
-    color: $black;
+    background-color: $GRAY-200;
+    color: $BLACK;
   }
 
   &.gradient {
-    background: linear-gradient(90.99deg, $primary 0.12%, $skyblue 101.84%);
-    color: white;
+    background: linear-gradient(90.99deg, $PRIMARY 0.12%, $skyblue 101.84%);
+    color: $WHITE;
   }
 }
