🔨Refactor : 멘토링에서 지적받은 부분 수정

--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -1,11 +1,11 @@
-$PRIMARY: #6d6afe;
-$RED: #ff5b56;
+$promary: #6d6afe;
+$red: #ff5b56;
 
-$BLACK: #111322;
-$WHITE: #ffffff;
+$black: #111322;
+$white: #ffffff;
 
-$GRAY-100: #f0f6ff;
-$GRAY-200: #e7effb;
-$GRAY-300: #ccd5e3;
-$GRAY-400: #9fa6b2;
-$GRAY-500: #3e3e43;
+$gray-100: #f0f6ff;
+$gray-200: #e7effb;
+$gray-300: #ccd5e3;
+$gray-400: #9fa6b2;
+$gray-500: #3e3e43;
