--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,4 +1,4 @@
-$TABLET_WIDTH: 769px;
-$MOBILE_WIDTH: 390px;
+$tabletWidth: 769px;
+$mobileWidth: 390px;
 
-$FOOTER_TABLET_WIDTH: 690px;
+$footerTabletWidth: 690px;
