--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -11,13 +11,13 @@ $snsWrapperMaxWidth: 116px;
 
 .footer {
   display: flex;
-  background-color: $BLACK;
+  background-color: $black;
   padding: $footerPadding 104px;
   height: calc($footerHeight - ($footerPadding * 2));
   align-items: flex-start;
   white-space: nowrap;
 
-  @media screen and (max-width: $FOOTER_TABLET_WIDTH) {
+  @media screen and (max-width: $footerTabletWidth) {
     padding: $footerPadding;
   }
 }
@@ -29,7 +29,7 @@ $snsWrapperMaxWidth: 116px;
   align-items: center;
   justify-content: space-between;
 
-  @media screen and (max-width: $FOOTER_TABLET_WIDTH) {
+  @media screen and (max-width: $footerTabletWidth) {
     display: grid;
     height: 100%;
     grid-template-columns: auto auto;
@@ -50,9 +50,8 @@ $contractColor: #cfcfcf;
   width: fit-content;
   gap: 30px;
   justify-content: center;
-  grid-column: 2 / 3;
 
-  @media screen and (max-width: $FOOTER_TABLET_WIDTH) {
+  @media screen and (max-width: $footerTabletWidth) {
     justify-content: flex-start;
     grid-column: 1 / 2;
     grid-row: 1 / 2;
@@ -70,7 +69,7 @@ $contractColor: #cfcfcf;
   justify-content: space-between;
   grid-column: 3 / 4;
 
-  @media screen and (max-width: $FOOTER_TABLET_WIDTH) {
+  @media screen and (max-width: $footerTabletWidth) {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
   }
