--- a/src/components/Gnb/style.module.scss
+++ b/src/components/Gnb/style.module.scss
@@ -1,19 +1,19 @@
 @import '@/styles';
 
-$BG_COLOR: #f0f6ff;
+$bgColor: #f0f6ff;
 
 .gnb {
-  $HEIGHT: 102px;
-  $PADDING_X: 200px;
-  $PADDING_Y: 32px;
+  $height: 102px;
+  $paddingX: 200px;
+  $paddingY: 32px;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
 
-  height: calc($HEIGHT - ($PADDING_Y * 2));
-  padding: $PADDING_Y $PADDING_X;
-  background-color: $BG_COLOR;
+  height: calc($height - ($paddingY * 2));
+  padding: $paddingY $paddingX;
+  background-color: $bgColor;
 
   .userSection {
     display: flex;
@@ -24,16 +24,16 @@ $BG_COLOR: #f0f6ff;
   // NOTE : 해당 max-width는 임의로 설정하였습니다.
   // 해당 width부터는 기존의 레이아웃이 어울리지 않는다 생각하였습니다.
   @media screen and (max-width: 950px) {
-    padding: $PADDING_Y;
+    padding: $paddingY;
   }
 
-  @media screen and (max-width: $MOBILE_WIDTH) {
-    $HEIGHT: 65px;
-    $M_PADDING_X: 32px;
-    $M_PADDING_Y: 18px;
+  @media screen and (max-width: $mobileWidth) {
+    $height: 65px;
+    $paddingX: 32px;
+    $paddingY: 18px;
 
-    height: calc($HEIGHT - ($M_PADDING_Y * 2));
-    padding: $M_PADDING_Y $M_PADDING_X;
+    height: calc($height - ($paddingY * 2));
+    padding: $paddingY $paddingX;
 
     .userSection {
       gap: 16px;
@@ -47,12 +47,12 @@ $BG_COLOR: #f0f6ff;
   align-items: center;
   gap: 6px;
 
-  $EMAIL_COLOR: #3e3e43;
+  $emailColor: #3e3e43;
   .email {
-    @include font-base($EMAIL_COLOR, 400, 14px, 16.71px);
+    @include font-base($emailColor, 400, 14px, 16.71px);
   }
 
-  @media screen and (max-width: $TABLET_WIDTH) {
+  @media screen and (max-width: $tabletWidth) {
     .email {
       display: none;
     }
