--- a/src/components/components/Button/Button.module.scss
+++ b/src/components/components/Button/Button.module.scss
@@ -1,5 +1,4 @@
-@import '@/styles/color.scss';
-@import '@/styles/font.scss';
+@import '@/styles';
 
 .btn {
   cursor: pointer;
@@ -8,6 +7,7 @@
   font-family: $font-family;
   font-style: $font-style;
   margin: 10px;
+  @include font-base($BLACK, 500, 16px, 1.5);
 
   /* 크기별 스타일 */
   &.add-link {
@@ -43,7 +43,7 @@
     opacity: 0px;
     border-radius: 50%;
     border: none;
-    background-image: url('../../../assets/ShareIcon.png');
+    background-image: url('https://github.com/codeit-sprint-6th-part3-team1/linkbrary/assets/128791227/cbc7c8f1-8dd3-4daf-859c-3f73aec5867a');
     background-repeat: no-repeat;
     background-position: center;
   }
@@ -55,7 +55,7 @@
     gap: 0px;
     border-radius: 5px;
     opacity: 0px;
-    border: 2px solid $primary;
+    border: 2px solid $PRIMARY;
     font-weight: 400px;
     font-size: 16px;
     line-height: 19.2px;
@@ -68,29 +68,29 @@
     gap: 0px;
     border-radius: 5px;
     opacity: 0px;
-    border: 2px solid $primary;
+    border: 2px solid $PRIMARY;
     font-weight: 400px;
     font-size: 14px;
   }
 
   /* 색상별 스타일 */
   &.primary {
-    background-color: $primary;
-    color: white;
+    background-color: $PRIMARY;
+    color: $WHITE;
   }
 
   &.white {
-    background-color: $white;
-    color: $black;
+    background-color: $WHITE;
+    color: $BLACK;
   }
 
   &.gray-200 {
-    background-color: $gray-200;
-    color: $black;
+    background-color: $GRAY-200;
+    color: $BLACK;
   }
 
   &.gradient {
-    background: linear-gradient(90.99deg, $primary 0.12%, $skyblue 101.84%);
-    color: white;
+    background: linear-gradient(90.99deg, $PRIMARY 0.12%, $skyblue 101.84%);
+    color: $WHITE;
   }
 }
