--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -7,7 +7,6 @@
   align-items: center;
   top: 0;
   left: 0;
-  right: 0;
   width: 100vw;
   height: 100vh;
 }
@@ -16,15 +15,14 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  padding-bottom: 30px;
+  padding: 16px;
   border: 1px solid $gray-300;
   border-radius: 15px;
-  min-height: 209px;
-  width: 360px;
-  max-width: 400px;
+  min-height: 193px;
+  width: 100%;
+  max-width: 360px;
   position: absolute;
   align-items: center;
-
   background-color: $white;
 }
 
@@ -35,43 +33,32 @@
 }
 
 .btnArea {
-  display: block;
   width: 100%;
+  height: fit-content;
 }
 
 .titleArea {
   position: relative;
-  top: -5px;
+  text-align: center;
+  top: -8px;
+  max-height: calc(54px - 8px);
+  margin-bottom: 24px;
 }
 
 .button {
-
   padding: 0px;
-  margin: 16px 16px 0 0;
   cursor: pointer;
   float: right;
   border: 0px;
-  background-color: $white;
 }
 
 .title {
-  text-align: center;
   margin: 0 auto;
   font-size: 20px;
-  font-family: Pretendard;
-  font-weight: 700;
-  text-align: center;
-  display: block;
-  float: left;
+  @include font-base(#373740, 700, 20px, 23.87px);
 }
 
 .subTitle {
-  text-align: center;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 22px;
-  color: $gray-400;
-  font-family: Pretendard;
-  margin: 0;
-  padding-top: 30px;
+  margin-top: 8px;
+  @include font-base($gray-400, 400, 14px, 20px);
 }
