--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -18,7 +18,7 @@ $snsWrapperMaxWidth: 116px;
   white-space: nowrap;
   width: 100%;
 
-  @media screen and (max-width: $FOOTER_TABLET_WIDTH) {
+  @media screen and (max-width: $footerTabletWidth) {
     padding: $footerPadding;
   }
 }
@@ -30,7 +30,7 @@ $snsWrapperMaxWidth: 116px;
   align-items: center;
   justify-content: space-between;
 
-  @media screen and (max-width: $FOOTER_TABLET_WIDTH) {
+  @media screen and (max-width: $footerTabletWidth) {
     display: grid;
     height: 100%;
     grid-template-columns: auto auto;
@@ -53,7 +53,7 @@ $contractColor: #cfcfcf;
   justify-content: center;
   grid-column: 2 / 3;
 
-  @media screen and (max-width: $FOOTER_TABLET_WIDTH) {
+  @media screen and (max-width: $footerTabletWidth) {
     justify-content: flex-start;
     grid-column: 1 / 2;
     grid-row: 1 / 2;
@@ -71,7 +71,7 @@ $contractColor: #cfcfcf;
   justify-content: space-between;
   grid-column: 3 / 4;
 
-  @media screen and (max-width: $FOOTER_TABLET_WIDTH) {
+  @media screen and (max-width: $footerTabletWidth) {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
   }
