--- a/src/pages/faq/faq.module.scss
+++ b/src/pages/faq/faq.module.scss
@@ -110,8 +110,55 @@ $bgColor: #f0f6ff;
 }
 .footer {
   max-width: $PC_WIDTH;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
+  width: 100%;
+
   align-items: center;
+  background-color: $BLACK;
+
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: $PC_WIDTH;
+    width: 100%;
+
+    @media screen and (max-width: $footerTabletWidth) {
+      flex-direction: column;
+      gap: 20px;
+    }
+  }
+
+  .copyright {
+    @include font-base(#676767, 400, 16px, 18.4px);
+  }
+
+  .contractList {
+    display: flex;
+    gap: 20px;
+
+    a {
+      @include font-base(#cfcfcf, 400, 16px, 18.4px);
+      text-decoration: none;
+      transition: color 0.3s;
+
+      &:hover {
+        color: $RED;
+      }
+    }
+
+    @media screen and (max-width: $footerTabletWidth) {
+      flex-direction: column;
+      gap: 10px;
+    }
+  }
+
+  .snsList {
+    display: flex;
+    gap: 20px;
+
+    @media screen and (max-width: $footerTabletWidth) {
+      margin-top: 20px;
+      gap: 16px;
+    }
+  }
 }
