--- a/src/pages/landing/landing.module.scss
+++ b/src/pages/landing/landing.module.scss
@@ -223,3 +223,57 @@ $MAIN_PADDING_Y: 32px;
     height: auto;
   }
 }
+
+.footer {
+  max-width: $PC_WIDTH;
+  width: 100%;
+  align-items: center;
+  background-color: $BLACK;
+
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: $PC_WIDTH;
+    width: 100%;
+
+    @media screen and (max-width: $footerTabletWidth) {
+      flex-direction: column;
+      gap: 20px;
+    }
+  }
+
+  .copyright {
+    @include font-base(#676767, 400, 16px, 18.4px);
+  }
+
+  .contractList {
+    display: flex;
+    gap: 20px;
+
+    a {
+      @include font-base(#cfcfcf, 400, 16px, 18.4px);
+      text-decoration: none;
+      transition: color 0.3s;
+
+      &:hover {
+        color: $RED;
+      }
+    }
+
+    @media screen and (max-width: $footerTabletWidth) {
+      flex-direction: column;
+      gap: 10px;
+    }
+  }
+
+  .snsList {
+    display: flex;
+    gap: 20px;
+
+    @media screen and (max-width: $footerTabletWidth) {
+      margin-top: 20px;
+      gap: 16px;
+    }
+  }
+}
