--- a/src/pages/privacypolicy/privacypolicy.module.scss
+++ b/src/pages/privacypolicy/privacypolicy.module.scss
@@ -22,7 +22,7 @@ $bgColor: #f0f6ff;
 
 .header {
   text-align: center;
-  margin-bottom: 20px;
+
   h1 {
     font-size: 36px;
     background: $BLACK;
@@ -145,7 +145,53 @@ $bgColor: #f0f6ff;
 .footer {
   max-width: $PC_WIDTH;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
   align-items: center;
+  background-color: $BLACK;
+
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: $PC_WIDTH;
+    width: 100%;
+
+    @media screen and (max-width: $footerTabletWidth) {
+      flex-direction: column;
+      gap: 20px;
+    }
+  }
+
+  .copyright {
+    @include font-base(#676767, 400, 16px, 18.4px);
+  }
+
+  .contractList {
+    display: flex;
+    gap: 20px;
+
+    a {
+      @include font-base(#cfcfcf, 400, 16px, 18.4px);
+      text-decoration: none;
+      transition: color 0.3s;
+
+      &:hover {
+        color: $RED;
+      }
+    }
+
+    @media screen and (max-width: $footerTabletWidth) {
+      flex-direction: column;
+      gap: 10px;
+    }
+  }
+
+  .snsList {
+    display: flex;
+    gap: 20px;
+
+    @media screen and (max-width: $footerTabletWidth) {
+      margin-top: 20px;
+      gap: 16px;
+    }
+  }
 }
