--- a/src/pages/login/style.module.scss
+++ b/src/pages/login/style.module.scss
@@ -21,6 +21,7 @@
   flex-direction: column;
   align-items: center;
   gap: 32px;
+  border: 1px solid red;
 }
 
 .loginForm {
@@ -30,6 +31,8 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+
+  border: 1px solid black;
 }
 
 .formHeaderContainer {
@@ -52,6 +55,7 @@
 
   gap: 16px;
 }
+
 .formTitleContainer {
   display: flex;
   justify-content: center;
@@ -100,13 +104,17 @@
 }
 
 .inputBackground {
-  width: 100%;
-  height: 60px;
+  // width: 100%;
+  // width: calc(100% - (15 * 2));
+  // height: 60px;
+  height: (60px - (18 * 2));
+
   padding: 18px 15px;
 
   border: 1px solid #ccd5e3;
   background-color: $white;
   border-radius: 8px;
+
   input {
     width: 100%;
     height: 24px;
