--- a/src/pages/privacypolicy/privacypolicy.module.scss
+++ b/src/pages/privacypolicy/privacypolicy.module.scss
@@ -1,5 +1,3 @@
-// privacypolicy.module.scss
-
 @import '@/styles';
 
 $PC_WIDTH: 1440px;
@@ -12,13 +10,8 @@ $bgColor: #f0f6ff;
   flex-direction: column;
   align-items: center;
   background-color: $GRAY-100;
-  max-width: $PC_WIDTH;
   width: 100%;
   margin: 0 auto;
-
-  @media (max-width: $TABLET_WIDTH) {
-    padding: 10px;
-  }
 }
 
 .header {
@@ -30,7 +23,7 @@ $bgColor: #f0f6ff;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
-    @media (max-width: $TABLET_WIDTH) {
+    @media (max-width: 1440px) {
       font-size: 28px;
     }
   }
@@ -59,7 +52,7 @@ $bgColor: #f0f6ff;
       }
     }
 
-    @media (max-width: $TABLET_WIDTH) {
+    @media (max-width: 1440px) {
       font-size: 14px;
     }
   }
@@ -71,7 +64,7 @@ $bgColor: #f0f6ff;
     border-left: 4px solid $PRIMARY;
     padding-left: 10px;
 
-    @media (max-width: $TABLET_WIDTH) {
+    @media (max-width: 1440px) {
       font-size: 20px;
     }
   }
@@ -88,7 +81,7 @@ $bgColor: #f0f6ff;
     font-size: 16px;
     color: $PRIMARY;
 
-    @media (max-width: $TABLET_WIDTH) {
+    @media (max-width: 1440px) {
       font-size: 14px;
     }
   }
@@ -102,7 +95,7 @@ $bgColor: #f0f6ff;
     font-size: 18px;
     color: $BLACK;
 
-    @media (max-width: $TABLET_WIDTH) {
+    @media (max-width: 1440px) {
       font-size: 16px;
     }
   }
@@ -124,7 +117,7 @@ $bgColor: #f0f6ff;
           color: $RED;
         }
 
-        @media (max-width: $TABLET_WIDTH) {
+        @media (max-width: 1440px) {
           font-size: 14px;
         }
       }
@@ -136,11 +129,15 @@ $bgColor: #f0f6ff;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100px;
+  height: 80px;
   background-color: $bgColor;
   width: 100%;
-  max-width: $PC_WIDTH; // 최대 너비 설정
+  max-width: $PC_WIDTH;
   margin: 0 auto;
+
+  @media (max-width: 1440px) {
+    height: 20px;
+  }
 }
 
 .footer {
@@ -157,7 +154,7 @@ $bgColor: #f0f6ff;
     max-width: $PC_WIDTH;
     width: 100%;
 
-    @media screen and (max-width: $footerTabletWidth) {
+    @media (max-width: 1440px) {
       flex-direction: column;
       gap: 20px;
     }
@@ -181,7 +178,7 @@ $bgColor: #f0f6ff;
       }
     }
 
-    @media screen and (max-width: $footerTabletWidth) {
+    @media (max-width: 1440px) {
       flex-direction: column;
       gap: 10px;
     }
@@ -191,7 +188,7 @@ $bgColor: #f0f6ff;
     display: flex;
     gap: 20px;
 
-    @media screen and (max-width: $footerTabletWidth) {
+    @media (max-width: 1440px) {
       margin-top: 20px;
       gap: 16px;
     }
