--- a/src/components/SearchBar/style.module.scss
+++ b/src/components/SearchBar/style.module.scss
@@ -16,7 +16,8 @@
   border-radius: 10px;
   padding: 10px 15px;
   width: 100%;
-  max-width: 600px;
+  height: 54px;
+  max-width: 1060px;
 }
 
 .icon {
