--- a/src/components/AddLink/style.module.scss
+++ b/src/components/AddLink/style.module.scss
@@ -1,13 +1,21 @@
+$mobile: 325px;
+$tablet: 704px;
+$desktop: 800px;
+
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 15px;
+  justify-content: space-between;
   top: 16px;
   left: 16px;
+
 }
 
 .inputContainer {
+  background-color: #ffffff;
   display: flex;
   align-items: center;
   border: 1px solid #6D6AFE;
@@ -74,25 +82,53 @@
   }
 }
 
-@media (max-width: 600px) {
+// @media (max-width: 600px) {
+//   .container {
+//     padding: 10px;
+//     justify-content: space-between;
+//     top: 80px;
+//     left: 16px;
+//   }
+
+//   .inputContainer {
+//     padding: 8px 10px;
+//   }
+
+//   .icon {
+//     width: 16px;
+//     height: 16px;
+//     margin-right: 8px;
+//   }
+
+//   .input {
+//     font-size: 14px;
+//     padding: 8px;
+//   }
+// }
+
+@media (max-width: 767px) {
   .container {
-    padding: 10px;
+    flex-direction: column;
+    align-items: stretch;
   }
 
   .inputContainer {
-    padding: 8px 12px;
+    margin-right: 0;
+    margin-bottom: 1rem;
+    width: 100%;
   }
 
-  .icon {
-    width: 16px;
-    height: 16px;
-    margin-right: 8px;
-  }
-
-  .input {
-    font-size: 14px;
-    padding: 8px;
-  }
+  
 }
 
+/* 테블릿 스타일 */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .contanier {
+    flex-direction: row;
+    align-items: center;
+  }
 
+  .inputContainer {
+    width: 70%;
+  }
+}
