--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -6,7 +6,6 @@
   justify-content: center;
   font-family: $font-family;
   font-style: $font-style;
-  margin: 0px;
   text-align: center;
   white-space: nowrap;
 
@@ -19,13 +18,30 @@
     border-radius: 8px;
     font-size: 22px;
     border: none;
+    font-weight: 600;
 
-    @media (max-width: 768px) {
-      .btn {
-        width: calc(100% - 20px);
-        margin: 5px;
-        font-size: 85%;
-      }
+    @media (max-width: 390px) {
+      width: 200px;
+      height: 37px;
+      font-size: 14px;
+      padding: 10px 16px;
+    }
+  }
+
+  &.login {
+    width: 128px;
+    height: 53px;
+    padding: 16px 20px;
+    font-size: 18px;
+    border: none;
+    border-radius: 8px;
+    font-weight: 600;
+
+    @media (max-width: 390px) {
+      width: 80px;
+      height: 37px;
+      font-size: 14px;
+      padding: 10px 16px;
     }
   }
 
@@ -93,5 +109,11 @@
   &.gradient {
     background: linear-gradient(90.99deg, $primary 0.12%, $skyblue 101.84%);
     color: $white;
+  }
+
+  @media (max-width: 1440px) {
+    .btn {
+      font-size: 85%;
+    }
   }
 }
