--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -10,22 +10,14 @@
   white-space: nowrap;
 
   /* 공통 스타일 */
-  &.add-link {
-    width: 350px;
-    height: 53px;
+  &.action {
+    width: 280px;
+    height: 51px;
     padding: 16px 20px;
-    gap: 10px;
-    border-radius: 8px;
-    font-size: 22px;
+    font-size: 16px;
     border: none;
+    border-radius: 8px;
     font-weight: 600;
-
-    @media (max-width: 390px) {
-      width: 200px;
-      height: 37px;
-      font-size: 14px;
-      padding: 10px 16px;
-    }
   }
 
   &.login {
@@ -39,6 +31,24 @@
 
     @media (max-width: 390px) {
       width: 80px;
+      height: 37px;
+      font-size: 14px;
+      padding: 10px 16px;
+    }
+  }
+
+  &.add-link {
+    width: 350px;
+    height: 53px;
+    padding: 16px 20px;
+    gap: 10px;
+    border-radius: 8px;
+    font-size: 22px;
+    border: none;
+    font-weight: 600;
+
+    @media (max-width: 390px) {
+      width: 200px;
       height: 37px;
       font-size: 14px;
       padding: 10px 16px;
@@ -109,6 +119,11 @@
   &.gradient {
     background: linear-gradient(90.99deg, $primary 0.12%, $skyblue 101.84%);
     color: $white;
+  }
+
+  &.red {
+    background-color: $red;
+    color: white;
   }
 
   @media (max-width: 1440px) {
